update readme, add badges

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ categories = ["data-structures", "parser-implementations"]
 description = "A tiny ID type that's like UUID except shorter and easier for a user to type in."
 edition = "2021"
 exclude = ["src/unused.rs"]
-keywords = ["id", "uuid", "tinyid"]
+keywords = ["id", "uuid", "tinyid", "shortid", "guid"]
 license-file = "LICENSE.md"
 name = "tinyid"
 repository = "https://github.com/tonyb983/tinyid"
