--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,11 +24,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@nightly
         with:
-          toolchain: nightly
-          override: true
-          profile: minimal
           components: llvm-tools-preview
 
       - name: Install cargo-llvm-cov
@@ -38,10 +35,10 @@ jobs:
         run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
 
       - name: Codecov upload
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
         with:
-          # token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          files: lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: ./lcov.info
           fail_ci_if_error: false
         
       - name: Coveralls upload
