workflow - change clippy command from warning to warnings

--- a/.github/workflows/rust_cached.yml
+++ b/.github/workflows/rust_cached.yml
@@ -52,4 +52,4 @@ jobs:
         continue-on-error: true  # Error is fine for lints I think
         with:
           command: clippy
-          args: -- -D warning
+          args: -- -D warnings
